--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "esbuild ./src/index.js --minify --outfile=lib/index.js",
     "semantic-release": "semantic-release",
-    "postinstall": "cd node_modules/markdown-truncate && npm install && npm run build"
+    "postinstall": "npm install && npm run build"
   },
   "author": "Sílvia Mur Blanch <pchiwan@gmail.com>",
   "license": "ISC",
