--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "esbuild ./src/index.js --minify --outfile=lib/index.js",
-    "semantic-release": "semantic-release",
-    "postinstall": "npm install && npm run build"
+    "semantic-release": "semantic-release"
   },
   "author": "Sílvia Mur Blanch <pchiwan@gmail.com>",
   "license": "ISC",
